<resources>
    <string name="app_name">CarsalesApp</string>

    <string name="hint_carName">Name</string>

    <string name="hint_year">Year</string>

    <string name="hint_engineSize">Engine Size</string>

    <string name="menu_cancelAction">Cancel</string>

    <string name="menu_addCar">Add</string>

    <string name="button">Add Car</string>

    <string name="Required">Required</string>

    <string name="enter_car_name"> Please enter a Car Name </string>

    <string name="enter_car_year"> Please enter a valid Car Year </string>

    <string name="enter_car_engineSize"> Please enter a valid Engine Size </string>

    <string name="save_car"> Save Car </string>

    <string name="button_addImage"> Add Image </string>

    <string name="select_car_image">Select car photo</string>

    <string name="change_car_image">Change car photo</string>

    <string name="night_day">Night/Day</string>

    <string name="button_location">Set Location</string>

    <string name="title_activity_map">MapActivity</string>

    <string name="menu_deleteCar">Delete</string>
    <string name="title_activity_car_maps">Map of all Cars</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="image">Image</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView1</string>
</resources>