<?xml version="1.0" encoding="utf-8"?>




<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.carsalesapp.activities.CarSellActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/carModelContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />




    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/carModelContainer"
        android:layout_marginHorizontal="20dp"
        app:helperText="@string/Required"
        app:helperTextTextColor="#FF0000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/carModel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_carName"
            android:inputType="text"
            android:lines="1"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize">


        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/carYearContainer"
        android:layout_marginHorizontal="20dp"
        app:helperText="@string/Required"
        app:helperTextTextColor="#FF0000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carModelContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/carYear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_year"
            android:inputType="number"
            android:lines="1"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize">


        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/carEngineSizeContainer"
        android:layout_marginHorizontal="20dp"
        app:helperText="@string/Required"
        app:helperTextTextColor="#FF0000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carYearContainer">

        <EditText
            android:id="@+id/carEngineSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_engineSize"
            android:inputType="numberDecimal"
            android:autofillHints="1.0, 2.0, 3.0"
            android:lines="1"
            tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carEngineSizeContainer"/>

</androidx.constraintlayout.widget.ConstraintLayout>